# caffronix-agent-skills

./: .gitignore  INSTALL.md  LICENSE  README.md
ai-job-analyze/: SKILL.md  pyproject.toml
ai-job-analyze/assets/report-template/: index.html  styles.css
ai-job-analyze/references/: analysis-playbook.md  browser-collection-sop.md  company-sources.md  normalization-sop.md  output-contract.md  stage1-collection.md  stage2-normalization.md  stage3-analyze-and-report.md  task-decomposition-sop.md
ai-job-analyze/scripts/: bootstrap.py  config.toml  run.py
ai-job-analyze/src/ai_job_analyze/: __init__.py  report.py  runtime.py
ai-job-analyze/tests/: test_bootstrap.py  test_report.py
deepseek-task/: SKILL.md  package-lock.json  package.json
deepseek-task/scripts/: deepseek-config.ts  doctor.ts  run-deepseek.ts  setup-deepseek-key.ts
